k8s/infra-services/minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: lissa-fit
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
